# icwe-demo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/icwe-demo/: SETUP.py  __main__.py  _typing.py  settings.py  ui.py  utils.py
test_system/: .env.example  docker-compose.example-system.yml  docker-compose.yml  start.sh
